[package]
authors = ["Noskcaj <kcajdev@gmail.com>"]
name = "macos-notifications"
version = "1.0.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Noskcaj19/macos-notifications"
homepage = "https://github.com/Noskcaj19/macos-notifications"
description = """
A simple and powerful macos notification wrapper
"""

[dependencies]
cocoa = "0.13.0"
objc = "0.2.2"
